[gd_scene load_steps=13 format=3 uid="uid://cb4srfaly8w6t"]

[ext_resource type="Script" uid="uid://ccghuort2judd" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dhwe5l8183bmt" path="res://scripts/camera_controller.gd" id="3_qhqgy"]
[ext_resource type="Shader" uid="uid://d08if5l6mo1tc" path="res://scripts/shaders/hurt_postprocess.gdshader" id="5_tuyoq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fjrip"]
shader = ExtResource("5_tuyoq")
shader_parameter/injury_factor = 0.0
shader_parameter/pulse_speed = 0.9
shader_parameter/vignette_color = Color(1, 0, 0, 0.6)
shader_parameter/color_quant = 10
shader_parameter/color_quant_threshold = 0.5
shader_parameter/blur_threshold = 0.4
shader_parameter/blur_factor = 1.5
shader_parameter/r_scale = 8.0
shader_parameter/g_scale = 4.0
shader_parameter/b_scale = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qhqgy"]
radius = 0.3
height = 1.8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qhqgy"]
height = 0.3
radius = 0.3

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "Crouch"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.8, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.9, 0), Vector3(0, 0.49999997, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 0.7, 0)]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "Lean Left"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/CameraTiltPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.34906584)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/CameraTiltPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(-0.5, -0.5, 0)]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "Lean Right"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/CameraTiltPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.34906584)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/CameraTiltPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(0.5, -0.5, 0)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Collider:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.9, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController/CameraTiltPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController/CameraTiltPivot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlg0r"]
_data = {
&"Crouch": SubResource("Animation_qhqgy"),
&"Lean Left": SubResource("Animation_qlg0r"),
&"Lean Right": SubResource("Animation_tuyoq"),
&"RESET": SubResource("Animation_dqkch")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_qhqgy"]
margin = 0.0
radius = 0.3

[node name="Player" type="CharacterBody3D" groups=["players"]]
script = ExtResource("1_3vyb7")
injury_effect_material = SubResource("ShaderMaterial_fjrip")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_qhqgy")

[node name="CameraController" type="Node3D" parent="." node_paths=PackedStringArray("horizontal_rotator", "vertical_rotator")]
transform = Transform3D(0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("3_qhqgy")
horizontal_rotator = NodePath("..")
vertical_rotator = NodePath("CameraTiltPivot/Camera")
sensitivity = 0.003

[node name="CameraTiltPivot" type="Node3D" parent="CameraController"]
transform = Transform3D(0.9999998, 0, 0, 0, 0.9999998, 0, 0, 0, 1, 0, -0.5, 0)

[node name="Camera" type="Camera3D" parent="CameraController/CameraTiltPivot"]
transform = Transform3D(1.0000001, 0, 0, 0, 1.0000001, 0, 0, 0, 1, 0, 0.49999988, 0)

[node name="LeanRightCheck" type="Area3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraController/LeanRightCheck"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_qhqgy")
debug_color = Color(2.6126626, 0, 0, 1)
debug_fill = false

[node name="LeanLeftCheck" type="Area3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraController/LeanLeftCheck"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_qhqgy")
debug_color = Color(2.6126626, 0, 0, 1)
debug_fill = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qlg0r")
}

[node name="HeightCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
shape = SubResource("SphereShape3D_qhqgy")
target_position = Vector3(0, 1.2, 0)
debug_shape_custom_color = Color(0, 0.71319693, 0.5163879, 1)

[node name="Overlays" type="CanvasLayer" parent="."]
layer = 2

[node name="DebugOverlayImage" type="TextureRect" parent="Overlays"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 6

[node name="InjuryEffects" type="ColorRect" parent="Overlays"]
material = SubResource("ShaderMaterial_fjrip")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
